<resources>
    <string name="app_name">Book your Meal</string>
    <string name="e_catering">e-Catering</string>
    <string name="get_restaurant_food_delivered_to_your_seat">Get restaurant food delivered\n right at your seat</string>
    <string name="enter_10_digit_pnr">Enter 10 digit PNR</string>
    <string name="enter_pnr_number">Enter PNR number</string>
    <string name="choose_items_from_restaurant">Choose items from restaurant</string>
    <string name="pay_online_or_cod">Pay online or COD</string>
    <string name="get_food_at_your_seat">Get food at your seat</string>
    <string name="your_orders_button">Your Orders</string>
    <string name="bulk_booking_button">Bulk Booking</string>
    <string name="verify_pnr_number_button">Verify PNR number</string>
    <string name="passenger_name">Passenger Name</string>
    <string name="enter_passenger_name">Enter Passenger Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="coach">Coach</string>
    <string name="seat_number">Seat number</string>
    <string name="s3">XX</string>
    <string name="_58">00</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="todo">TODO</string>
    <string name="serviceable_stations_based_on_your_journey_progress">Serviceable stations based on your journey progress</string>
    <string name="mys">MYS</string>
    <string name="_9876543210">9876543210</string>
    <string name="_12578">25</string>
    <string name="_20_july">20 July</string>
    <string name="boarding">Boarding</string>
    <string name="pnr">PNR</string>
    <string name="train">Train#</string>
    <string name="date">Date</string>
    <string name="mysuru_jn_mys">MYSURU JN (MYS)</string>
    <string name="arrival_at_7_20am_july_20">Arrival at 7:20am, July 20</string>
    <string name="halt_time_10_minutes">Halt time: 10 minutes</string>
    <string name="irctc">IRCTC: Book a Meal</string>
    <string name="no_stations_found">No Stations Found!</string>
    <string name="no_restaurants_found">No Restaurants Found!</string>
    <string name="check_your_order">Check your Order</string>
    <string name="no_foods_available_yet">No Foods available!</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="sign_out">Sign Out</string>
    <string name="book_your_meal">Book your Meal</string>
</resources>
