<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.HomePageActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/thali_set_vege" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_catering"
        android:textColor="@color/colorAccent"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/get_restaurant_food_delivered_to_your_seat"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/pnr_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/enter_10_digit_pnr"
        android:inputType="number"
        android:padding="15dp" />

    <Button
        android:id="@+id/pnr_verify_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_bg"
        android:padding="15dp"
        android:text="@string/verify_pnr_number_button"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/check_your_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_bg"
        android:padding="15dp"
        android:text="@string/check_your_order"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:visibility="gone" />

</LinearLayout>

